Refactor type hints in notebooks and helper functions for consistency

--- a/Notebook_08-Advanced_label_models.ipynb
+++ b/Notebook_08-Advanced_label_models.ipynb
@@ -11380,7 +11380,7 @@
     "    X_test: np.ndarray,\n",
     "    y_test: np.ndarray,\n",
     "    quantile: float,\n",
-    "    initial_consensus_labels: np.ndarray | None = None,\n",
+    "    initial_consensus_labels: np.ndarray = None,\n",
     ") -> dict:\n",
     "    \"\"\"\n",
     "    Train and evaluate a logistic regression model using filtered training data and consensus labels.\n",
